<resources>
    <string name="app_name">Tugas AKB</string>
    //Main Activity
    <string name="img1">img1</string>
    <string name="t_view1">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="btn1">Mulai</string>
    //Login Activity
    <string name="t_view2">Kode Keluarga</string>
    <string name="t_view3">Ketikkan kode keluarga yang Ayah Bunda miliki disini</string>
    <string name="hint1">A1B2C3</string>
    <string name="terms">
        Dengan menekan tombol masuk berarti Anda menyetujui <b>Ketentuan Pengguna</b> dan <b>Kebijakan Data</b> kami
    </string>
    <string name="btn2">Masuk</string>
    <string name="t_view5">Belum punya kode keluarga?</string>
    <string name="btn3">Beli Kode Keluarga Disini</string>
    //Biodata Activity
    <string name="b_tview1">Nama Panggilan Kamu</string>
    <string name="b_hint1">Contoh : Budi</string>
    <string name="b_tview2">Umur Kamu</string>
    <string name="b_hint2">Contoh : 12</string>
    <string name="b_btn1">Selanjutnya</string>
    //Done Activity
    <string name="d_tview1">
        Beres! Sekarang kamu udah bisa ngecek penggunaan HP mu tiap hari buat bantu kamu ngatur waktu :)
    </string>
    <string name="d_btn1">Oke</string>
</resources>
