<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b_btn1"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/b_btn1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_tedit2"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/b_tview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/b_tview1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/b_tedit1"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/b_hint1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/colorCoolGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_tview1" />

    <TextView
        android:id="@+id/b_tview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/b_tview2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_tedit1" />

    <EditText
        android:id="@+id/b_tedit2"
        android:layout_width="319dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/nunito"
        android:hint="@string/b_hint2"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/colorCoolGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_tview2"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>